kubernetes/n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n
    spec:
      containers:
        - command: ["/bin/sh"]
          args: ["-c", "sleep 5 && exec n8n start"]
          image: n8nio/n8n:beta
          name: n8n
          ports:
            - containerPort: 5678
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-claim0
            - mountPath: /tls
              name: redis-tls
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: n8n-claim0
          persistentVolumeClaim:
            claimName: n8n-claim0
        - name: redis-tls
          secret:
            secretName: redis-tls
