kubernetes/redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          command:
            - "redis-server"
            - "/usr/local/etc/redis/redis.conf"
            - "--requirepass"
            - "$(REDIS_PASSWORD)"
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis-data
              mountPath: /data
            - name: redis-generated
              mountPath: /usr/local/etc/redis
            - name: redis-tls
              mountPath: /tls
              readOnly: true
            - name: redis-config
              mountPath: /usr/local/etc/redis/redis.conf
              subPath: redis.conf
      volumes:
        - name: redis-config
          configMap:
            name: redis-config
        - name: redis-secret
          secret:
            secretName: redis-auth
        - name: redis-tls
          secret:
            secretName: redis-tls
        - name: redis-generated
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        storageClassName: local-path
