kubernetes/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  labels:
    service: n8n
spec:
  type: ClusterIP
  selector:
    service: n8n
  ports:
    - port: 5678
      targetPort: 5678
      protocol: TCP
      name: http
